Particle Texture ignores generated coordinates #40983

Closed
opened 2014-07-07 17:42:48 +02:00 by Gottfried Hofmann · 7 comments

System Information
Operating system and graphics card

Ubuntu 14.04 x64 geforce 730M

Blender Version
Broken: 2.71 x64 official

Short description of error

See attached .blend - a wide object with blend texture for material and particles. The texture uses generated coordinates which show up fine when rendering but the particles just emit from left to right for 1 BU, then all at once.

Exact steps for others to reproduce the error
Open the .blend, render -> texture looks fine. Hit Alt+A for playback, particles show weird behaviour.bug.particle.texture.blend

**System Information** Operating system and graphics card Ubuntu 14.04 x64 geforce 730M **Blender Version** Broken: 2.71 x64 official **Short description of error** See attached .blend - a wide object with blend texture for material and particles. The texture uses generated coordinates which show up fine when rendering but the particles just emit from left to right for 1 BU, then all at once. **Exact steps for others to reproduce the error** Open the .blend, render -> texture looks fine. Hit Alt+A for playback, particles show weird behaviour.[bug.particle.texture.blend](https://archive.blender.org/developer/F96973/bug.particle.texture.blend)

Changed status to: 'Open'

Changed status to: 'Open'
Lukas Tönne was assigned by Gottfried Hofmann 2014-07-07 17:42:48 +02:00

Added subscriber: @GottfriedHofmann

Added subscriber: @GottfriedHofmann

This issue was referenced by 06d943cfd6

This issue was referenced by 06d943cfd684176e10c2a31b8ea66dfb2221e870
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 06d943cfd6.

Closed by commit 06d943cfd6.
ag commented 2014-08-20 19:00:01 +02:00 (Migrated from localhost:3001)

Added subscribers: @Lukas-132, @ag

Added subscribers: @Lukas-132, @ag
ag commented 2014-08-20 19:00:01 +02:00 (Migrated from localhost:3001)

@GottfriedHofmann: thanks for forwarding the issue I've stumbled over in your tutorial.
@Lukas-132: thanks for the promptly fix.

Regards,
Andrey

@GottfriedHofmann: thanks for forwarding the issue I've stumbled over in your tutorial. @Lukas-132: thanks for the promptly fix. Regards, Andrey
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40983
No description provided.